<resources>
    <string name="app_name">OTwo</string>
    <string name="title">OTwo</string>
    <string name="lab_name">© Gautam\'s Lab</string>
    <string name="bluetooth_logo">Bluetooth Logo</string>
    <string name="tower_logo">tower_logo</string>
    <string name="dbm">dbm</string>
    <string name="device_list">DEVICES</string>
    <string name="scan">scan</string>
    <string name="meter">m</string>
    <string name="distance">distance</string>
    <string name="broadcast">Broadcast</string>
    <string name="preference_file_key">otwo-sp</string>
    <string name="pref_virtual_id_key">otwo-vids</string>
    <string name="register">Register</string>
    <string name="phone_hint">Phone Number</string>
    <string name="api_url">https://otwo-api.herokuapp.com</string>
    <string name="vid">Get New Virtual ID</string>
    <string name="phone_pref_key">phone-pref</string>
</resources>
