<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#fefefe"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Dashboard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat"
        android:letterSpacing=".3"
        android:text="@string/device_list"
        android:textColor="#1b1b1b"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/broadcast_btn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/broadcast"
        android:textStyle="bold"
        app:icon="@drawable/ic_search_black_24dp"
        app:iconGravity="textStart"
        app:iconPadding="10dp" />

    <Button
        android:id="@+id/scan_btn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/scan"
        android:textStyle="bold"
        app:icon="@drawable/ic_search_black_24dp"
        app:iconGravity="textStart"
        app:iconPadding="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>