<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:selectableItemBackground"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:checkable="false"
        android:clickable="false"
        android:focusable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:contentDescription="@string/bluetooth_logo"
                android:src="@drawable/bluetooth_icon" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="20dp" />

            <TextView
                android:id="@+id/device_name"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text=""
                android:textColor="#1b1b1b"
                android:textStyle="normal" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="20dp" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:layout_marginEnd="6dp"
                android:contentDescription="@string/tower_logo"
                android:src="@drawable/tower" />

            <TextView
                android:id="@+id/signal_strength"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/montserrat"
                android:text=""
                android:textColor="#1b1b1b"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dbm" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="20dp" />

            <TextView
                android:id="@+id/device_type"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/montserrat"
                android:text=""
                android:textColor="#1b1b1b"
                android:textSize="15sp"
                android:textStyle="normal" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>